# ffmpeg-tutorial

./: .gitignore  CMakeLists.txt  README.md  tutorial02.c  tutorial03.c
FFmpeg2.5/include/libavutil/: ffversion.h
FFmpeg2.5/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
FFmpeg2.5/share/man/man1/: ffmpeg-all.1  ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg-resampler.1  ffmpeg-scaler.1  ffmpeg-utils.1  ffmpeg.1  ffprobe-all.1  ffprobe.1  ffserver-all.1  ffserver.1
FFmpeg2.5/share/man/man3/: libavcodec.3  libavdevice.3  libavfilter.3  libavformat.3  libavutil.3  libswresample.3  libswscale.3
video/: sintel.mpg
